--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,39 +17,47 @@
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
             android:gravity="center"
-            android:text="Application name"
+            android:text="@string/application_name"
             android:textColor="@color/colorPrimary"
             android:textSize="24sp"
             android:padding="30dp"/>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/email_TIL_signin"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:errorEnabled="true"
+            app:errorTextColor="@color/colorAccent"
             android:hint="@string/email">
 
             <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tv_username"
+            android:id="@+id/tv_username_signin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress"
+            />
+
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/password_TIL_signin"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:errorEnabled="true"
+            app:errorTextColor="@color/colorAccent"
             android:hint="@string/password">
 
         <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/tv_password"
+            android:id="@+id/tv_password_signin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"/>
         </com.google.android.material.textfield.TextInputLayout>
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_log_in"
+            android:id="@+id/btn_log_in_signin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
@@ -64,15 +72,14 @@
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_sign_up"
-        style="?attr/materialButtonOutlinedStyle"
+        android:id="@+id/btn_sign_up_signin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp"
         android:text="@string/dont_have_account"
-        android:textColor="@color/colorPrimary"
         android:textAllCaps="false"
         android:textSize="18sp"
+        android:textColor="#fff"
         app:strokeColor="@color/colorPrimary"
         android:layout_alignParentBottom="true"/>
 
