--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -69,6 +69,18 @@
             style="?attr/materialButtonOutlinedStyle"
             app:strokeColor="@color/colorPrimary"
             />
+
+        <Button
+            android:id="@+id/btn_login_without_profile"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            style="@style/Widget.MaterialComponents.Button.TextButton"
+            android:gravity="center"
+            android:text="@string/no_login_enter"
+            android:textColor="@color/colorPrimary"
+            android:textSize="12sp"
+            android:padding="10dp"/>
+
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
@@ -82,6 +94,8 @@
         android:textColor="#fff"
         app:strokeColor="@color/colorPrimary"
         android:layout_alignParentBottom="true"/>
+
+
 
 
 </RelativeLayout>
