--- a/app/src/main/res/layout/dialog_meal_item.xml
+++ b/app/src/main/res/layout/dialog_meal_item.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    android:padding="8dp">
 
     <com.google.android.material.textfield.TextInputLayout
-        android:layout_margin="12dp"
+        android:layout_margin="8dp"
         android:id="@+id/meal_item_TIL"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
         android:layout_width="match_parent"
