--- a/app/src/main/res/layout/activity_cook_book2.xml
+++ b/app/src/main/res/layout/activity_cook_book2.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".CookBookActivity">
+    tools:context=".role.user.CookBookActivity">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_cookbook"
