--- a/app/src/main/res/menu/cookbook_child.xml
+++ b/app/src/main/res/menu/cookbook_child.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/menu_edit"
-        android:title="Edit"/>
+        android:title="@string/popup_edit"/>
     <item android:id="@+id/menu_delete"
-        android:title="Delete"/>
+        android:title="@string/popup_delete"/>
     <item android:id="@+id/menu_complete"
-        android:title="Mark as complete"/>
+        android:title="@string/popup_mark_as_complete"/>
 </menu>
